tests/NormalTests/paczka2/big_fuzzy/76114309.err
Error in line 19: tNomR1ThE S271 31,8
Error in line 32: ?A25%
Error in line 53: A254 S349 40,1
Error in line 52: Fg6b A254 37,6
Error in line 56: cLqZ0rXuEo A254 35,8
Error in line 66: A254 S349 r,2
Error in line 64: K6Kb S349 38,7
Error in line 57: A254 A254 63,3
Error in line 65: ztJaOBnJii S406 95,7
Error in line 69: A254 S349 0,8
Error in line 72: ztJaOBnJii A254 74,5
Error in line 80: ztJaOBnJii S349 84,4
Error in line 70: Fg6b A254 1,3
Error in line 88: A254 A254 33,52
Error in line 97: A254 A254 21,2
Error in line 105: Fg6b A254 6,2
Error in line 111: K6Kb S406 65,6
Error in line 110: Fg6b S406 89,7
Error in line 117: ztJaOBnJii S406 50,2
Error in line 137: A254 S271 98,9
Error in line 139: A254 A254 20,1
Error in line 136: 6fKnyKWzWWV A254 63,3
Error in line 144: ztJaOBnJii A254 16,0
Error in line 145: 6fKnyKWzWWV S406 21,5
Error in line 146: ztJaOBnJii S349 50,5
Error in line 151: K6Kb S349 51,6
Error in line 108: tNomR1ThE A254 22,2
Error in line 157: K6Kb S271 85,5
Error in line 156: 6fKnyKWzWWV S349 0,7
Error in line 168: 6fKnyKWzWWV S406 66]9
Error in line 160: 6fKnyKWzWWV S271 23,2
Error in line 167: Fg6b S406 38,4
Error in line 174: Fg6b S349 45,4
Error in line 175: Fg6b S406 25,8
Error in line 186: tNomR1ThE S406 80,9
Error in line 165: ztJaOBnJii S271 217,7
Error in line 192: ztJaOBnJii S349 24,0
Error in line 191: tNomR1ThE S349 11,5
Error in line 181: K6Kb S349 62,0
Error in line 207: K6Kb S271 45,0
Error in line 208: tNomR1ThE S349 94,3
Error in line 215: tNomR1ThE A254 -1,7
Error in line 220: A254 S349 30,1
Error in line 214: tNomR1ThE A254 34,2
Error in line 235: Fg6b A254 95,9
Error in line 231: ztJaOBnJii A254 59,4
Error in line 238: 6fKnyKWzWWV S34T 62,5
Error in line 241: Fg6b S349 -2,5
Error in line 237: ztJaOBnJii S349 16,5
Error in line 245: tNomR1ThE S406 `1,1
Error in line 247: A254 S406 30,73
